# Rail

./: .env.example  .gitignore  .prettierignore  Dockerfile  RAILMADAD_AUTOMATION_SPEC_REPORTS_1_2_3.txt.txt  RAILMADAD_AUTOMATION_SPEC_REPORTS_4_5_6.txt.txt  README.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
backend/: .env.example  Dockerfile  README.md  login_payload.json  proxy_cookies.txt  proxy_headers.txt  proxy_login_body.txt  pyproject.toml  railway.db.bak  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: automation.py
backend/scripts/: accept_scr_train_manual_generate.py  ci.ps1  debug_scr_modal.py  debug_scr_train.py  discover_report10_deep.py  discover_report10_fields.py  discover_report6_scr.py  ensure_tables.py  find_zone_train_type_url.py  generate_daily_summary_from_latest_run.py  generate_report_samples_1_2_5_6.py  inspect_latest_run_sources.py  live_acceptance_run.py  live_manual_acceptance.py  process_division_csv.py  run_live_multi_report.py  run_remaining_reports.py  run_report2_only.py  run_report4_only.py  run_train_scr_only.py  seed_datasets_once.py  validate_analytics_vs_csv.py  verify_activity_tz.py  verify_dashboard_analytics.py  verify_dashboard_live.py  verify_dual_artifacts_live.py  verify_reports_3_6_reprocess.py  verify_sample_headers.py  verify_settings_live.py
backend/storage/: live_manual_acceptance.json
backend/tests/: conftest.py
(+1445 files in other folders)
